--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 phpmyadmin/
 cgi-bin/
-pages/ege/tasks/
+pages/ege/images/
 pages/olymp/images/
 pages/school/images/
+pages/docs/images/
+pages/info/images/
